--- a/css/master.css
+++ b/css/master.css
@@ -1,14 +1,35 @@
 :root {
     --main-color: #3dc3b8;
+    --dark-back : #2d3436;
+    --dark-color: #636e72;
 }
 body {
     /*padding-top: 70px;*/
     font-size: arial;
     background-color: var(--main-color);
+    transition-duration: .7s;
+
 }
 .no-margin {
     margin-top: 0 !important;
 }
+/* Start Dark Mode*/
+.dark-btn {
+    right: 0;
+    position: fixed;
+    top: 80%;
+    transform: translateY(-80%);
+    z-index: 1000000000000000000000;
+    cursor:pointer
+}
+.dark-btn .out {
+    padding: 8px 12px;
+    background: #fbc531;
+    color: #f5f6fa;
+    transition: all 2s ease-in-out;
+
+}
+
 /* Start Top Header*/
 .top-header {
     padding: 10px auto;
@@ -30,6 +51,9 @@ body {
     font-size: 44px;
     letter-spacing: 2px;
     margin: 9px;
+    font-size: 25px;
+    position: relative;
+    top: 5px;
 }
 .top-header .search{
     margin-top: 20px;
@@ -40,7 +64,7 @@ body {
 }
 .top-header .search .prefix {
     position: absolute;
-    top: 33px;
+    top: 27px;
     right: 28px;
     font-size: 20px;
     color: var(--main-color);
@@ -52,7 +76,7 @@ body {
 }
 .top-header .basket h2 {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 35px;;
+    font-size: 25px;
     
 }
 .top-header .basket h2 span {
@@ -107,10 +131,12 @@ body {
 }
 @media(max-width: 991px) {
     .top-header .search .prefix {
-        top: 15px;
+        top: 9px;
     }
     .nav > li > a {
-        padding: 5px 3px;
+        padding: 8px 3px;
+        text-align: left !important;
+        margin-left: 10px;
     }
 }
 /* Start Carsual*/
@@ -241,7 +267,8 @@ h2 {
 .feature .product h3{
     font-size: 30px;
     font-weight: bold;
-    color: var(--main-color)
+    color: var(--main-color);
+    margin-top: 100px;
 }
 .feature .product .price{
     font-size: 30px;
@@ -271,4 +298,55 @@ h2 {
     padding: 10px;
     color: #fff;
     font-size:16px;
+}
+/******************************Start Dark Mode*********************************/
+
+body.dark {
+    background-color: var(--dark-back);
+    color: #EEE;
+}
+body.dark .top-header {
+    background-color: unset;
+}
+body.dark .top-header  h2{
+    color: #eee ;
+}
+body.dark .top-header input {
+    background-color: var(--dark-color);
+    border: 1px solid var(--dark-color);
+}
+body.dark .navbar-default {
+    background-color: var(--dark-back);
+    border: 0;
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    border-radius: 0;
+}
+body.dark .carousel {
+    background-color: var(--dark-back);
+}
+body.dark .categ {
+    background-color: unset;
+    border: 0;
+    box-shadow: 0 0 0 1px var(--dark-color);
+}
+body.dark .feature {
+    background-color: var(--dark-back);
+    color: var(--dark-color);
+}
+body.dark .feature .product {
+    border: 1px solid var(--dark-color);
+    padding: 20px;
+    border-bottom: 5px solid var(--dark-color);
+    margin-top: 70px;
+    height: 460px;
+}
+body.dark .feature .product .btn {
+    background-color: var(--dark-color);
+    border: 1px solid #FFF;
+}
+body.dark .copy {
+    background-color: var(--dark-back);
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #fff;
 }
