--- a/css/master.css
+++ b/css/master.css
@@ -8,10 +8,63 @@ body {
     font-size: arial;
     background-color: var(--main-color);
     transition-duration: .7s;
-
+    overflow: hidden;
+    transition: .5s scroll;
 }
 .no-margin {
     margin-top: 0 !important;
+}
+/* Start Landing*/
+.landing-overlay {
+    width: 100%;
+    height:100%;
+    position: fixed;
+    top:0;
+    left:0;
+    z-index:99999999999;
+    background: rgba(1,1,1,1);
+}
+.message {
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.spinner {
+    width: 40px;
+    height: 40px;
+    position: relative;
+    margin: 100px auto;
+} 
+.double-bounce1, .double-bounce2 {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: #333;
+    opacity: 0.6;
+    position: absolute;
+    top: 0;
+    left: 0;
+    
+    -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
+    animation: sk-bounce 2.0s infinite ease-in-out;
+}
+.double-bounce2 {
+    -webkit-animation-delay: -1.0s;
+    animation-delay: -1.0s;
+}
+@-webkit-keyframes sk-bounce {
+    0%, 100% { -webkit-transform: scale(0.0) }
+    50% { -webkit-transform: scale(1.0) }
+}
+@keyframes sk-bounce {
+    0%, 100% { 
+    transform: scale(0.0);
+    -webkit-transform: scale(0.0);
+    } 50% { 
+    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+    }
 }
 /* Start Dark Mode*/
 .dark-btn {
@@ -19,7 +72,7 @@ body {
     position: fixed;
     top: 80%;
     transform: translateY(-80%);
-    z-index: 1000000000000000000000;
+    z-index: 99999999;
     cursor:pointer
 }
 .dark-btn .out {
@@ -29,7 +82,22 @@ body {
     transition: all 2s ease-in-out;
 
 }
-
+/**Start Scroll Top*/
+.scroll {
+    position: fixed;
+    right:0;
+    top:90%;
+    transform: translateY(-90%);
+    z-index: 99999999;
+}
+.scroll .btn {
+    transition: .5s opacity;
+    transition-duration: .5s;
+    border-radius: 0;
+    padding: 7px 14px;
+    outline: none;
+    opacity:0;
+}
 /* Start Top Header*/
 .top-header {
     padding: 10px auto;
@@ -144,6 +212,7 @@ body {
     position: relative;
     min-height: 400px;
     background-color: var(--main-color);
+    transition:.5s all ease-in-out;
 }
 .carousel-indicators {bottom:0;}
 .carousel-indicators li,
@@ -349,4 +418,28 @@ body.dark .copy {
     background-color: var(--dark-back);
     border-top: 1px solid #fff;
     border-bottom: 1px solid #fff;
+}
+/***************Start Choose Page**************/
+.choose h2 {
+    color: var(--main-color);
+    margin-bottom: 50px;
+}
+.cho {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-bottom: 20px;
+
+}
+.cho:hover {
+    background-color: var(--dark-color);
+    color: #fff
+}
+.cho img{
+    width: 100%;
+}
+.cho h2 {
+    margin-bottom: 0;
 }
